# AUWO-testbed

./: README.md  frames_2025-11-27_17.52.13.gv
config/udev/: 99-realsense-d435.rules  99-rplidar.rules
docker/: .env  Dockerfile  docker-compose.yml  entrypoint.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_slam_rtab/share/ament_index/resource_index/parent_prefix_path/: robot_slam_rtab
install/robot_slam_rtab/share/robot_slam_rtab/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_slam_rtab/share/robot_slam_rtab/config/: rtbmap_config.yaml
install/robot_slam_rtab/share/robot_slam_rtab/rviz/: rtabmap_leo.rviz
install/robot_slam_rtabmap/share/robot_slam_rtabmap/: local_setup.sh  package.dsv  package.sh  package.xml  package.zsh
install/robot_slam_rtabmap/share/robot_slam_rtabmap/cmake/: robot_slam_rtabmapConfig.cmake
install/robot_slam_rtabmap/share/robot_slam_rtabmap/config/: rtbmap_config.yaml
install/robot_slam_rtabmap/share/robot_slam_rtabmap/launch/: rtbmap.launch.py
log/: latest_build
scripts/: build_docker_image.sh  install_udev_rules.sh  run_docker_container.sh
src/excavator_cycle/: CMakeLists.txt  package.xml
src/excavator_cycle/scripts/: excavator_cycle.py
src/excavator_description/: CMakeLists.txt  README.md  model.config  package.xml
src/excavator_description/config/: controllers.yaml  view.rviz
src/excavator_description/launch/: view_rviz.launch.py  view_rviz_sim.launch.py
src/excavator_description/urdf/: excavator.urdf.xacro
src/excavator_description/worlds/: .keep  empty.sdf
src/excavator_gazebo/: CMakeLists.txt  package.xml
src/excavator_gazebo/launch/: gazebo.launch.py
src/excavator_interactive_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
src/excavator_interactive_rviz/launch/: auwo_twin.launch.py
src/excavator_interactive_rviz/resource/: excavator_interactive_rviz
src/excavator_interactive_rviz/scripts/: joint_imarkers.py  twin_router_node.py
src/excavator_interactive_rviz/src/: preset_poses_panel.cpp
src/excavator_teleop/: CMakeLists.txt  package.xml
src/excavator_teleop/scripts/: teleop_excavator.py
src/install/: local_setup.sh  setup.sh
src/install/robot_slam_rtabmap/share/robot_slam_rtabmap/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml
src/install/robot_slam_rtabmap/share/robot_slam_rtabmap/cmake/: robot_slam_rtabmapConfig.cmake
src/log/: latest_build
src/robot_bringup/: package.xml
src/robot_description/: package.xml
src/robot_description/urdf/: realsense_d435if.urdf.xacro  robot.urdf.xacro  rplidar.urdf.xacro
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: nav2_params.yaml  nav2_params_original.yaml  simple_navigate_to_goal.xml  simple_navigate_to_pose.xml
src/robot_navigation/launch/: nav2_localization.launch.py  navigation.launch.py
src/robot_slam_rtabmap/: CMakeLists.txt  frames.pdf.gv  frames_2025-10-27_12.45.22.gv
src/robot_slam_rtabmap/launch/: rtabmap.launch.py  rtabmap_localization.launch.py  rtabmap_mapping.launch.py  rtbmap.launch.py
src/robot_slam_rtabmap/robot_slam_rtabmap/: CMakeLists.txt  package.xml
